length attribute is missing on OfflineAudioContext https://bugs.webkit.org/show_bug.cgi?id=215287

Reviewed by Geoffrey Garen.

LayoutTests/imported/w3c:

Rebaseline WPT test now that more checks are passing.

* web-platform-tests/webaudio/idlharness.https.window-expected.txt:

Source/WebCore:

length attribute is missing on OfflineAudioContext:
- https://www.w3.org/TR/webaudio/#dom-offlineaudiocontext-length

Test: webaudio/offlineaudiocontext-length.html

* Modules/webaudio/BaseAudioContext.h:
(WebCore::BaseAudioContext::renderTarget const):
* Modules/webaudio/OfflineAudioContext.cpp:
(WebCore::OfflineAudioContext::length const):
* Modules/webaudio/OfflineAudioContext.h:
* Modules/webaudio/OfflineAudioContext.idl:

LayoutTests:

Add layout test coverage.

* webaudio/offlineaudiocontext-length-expected.txt: Added.
* webaudio/offlineaudiocontext-length.html: Added.


Canonical link: https://commits.webkit.org/228066@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265388 268f45cc-cd09-0410-ab3c-d52691b4dbfc